src/styles/header.css
.header {
  display: flex;
  justify-content: space-between;
  padding: 12px 96px;
  position: fixed;
  width: 100%;
  z-index: 1;
  top: 0;
}

.header > a {
  color: #f8ebee;
  text-decoration: none;
  font-size: 20px;
}

.header > ul {
  display: flex;
  justify-content: space-evenly;
  gap: 20px;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

li > a {
  color: #f8ebee;
  text-decoration: none;
  font-size: 20px;
  padding: 8px;
}

li > a:hover {
  background-color: #f8ebee;
  color: black;
  border-radius: 8px;
}

.headerBackground {
  height: 50px;
  width: 100%;
  background-color: #3b465c;
  position: fixed;
  top: 0;
}

.spacer {
  margin-top: 80px;
}

